syntax = "proto3";

option java_multiple_files = true;
option java_package = "user";
option java_outer_classname = "userImpl";

package user;

// Interface exported by the server.
service user {

  rpc userLogin(LoginRequest) returns (LoginMessage) {}
  rpc userLogout(EmptyMessage) returns (LogOutMessage) {}


}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LoginMessage {
  string message = 1;
}

message LogOutMessage {
	string message = 1;
}

message EmptyMessage {}